# Bookstore

./: Dockerfile  Mackefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  heroku-deploy.yml
bookstore/: settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: __init__.py  order_serialize.py
order/tests/: __init__.py  test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
product/: urls.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category.py
product/models/: product.py
product/serializers/: __init__.py  category_serialize.py  product_serialize.py
product/tests/: __init__.py  test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
